# concordia-chat-app

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  README.md  go.work  go.work.sum  one.txt  package-lock.json  package.json  pom.xml  results.txt  results_remote.txt  tasks.md  three.txt
.claude/: settings.local.json
.claude/skills/implement-task/: SKILL.md
apps/desktop-app/: main.js  package.json  preload.js
apps/web-app/: .dockerignore  Dockerfile.prod  jest.config.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts
apps/web-app/__tests__/: LoginPage.test.tsx  MessageInput.test.tsx  MessageList.test.tsx
apps/web-app/app/: globals.css  layout.js  layout.tsx  page.js  page.tsx
apps/web-app/e2e/: auth-chat.spec.ts
contracts/kafka-schemas/: README.md  audit-events.json  mention.json  message-created.json  user-registered.json
contracts/lib/python/audit/: pyproject.toml
contracts/lib/python/audit/audit/: __init__.py
contracts/lib/python/authmw/: pyproject.toml
contracts/lib/python/authmw/authmw/: __init__.py  validator.py
contracts/lib/python/authmw/tests/: test_validator.py
contracts/lib/rust/audit/: Cargo.toml
contracts/lib/rust/audit/src/: lib.rs
contracts/proto/: check_perm.proto  generate.sh
docs/: auth_implementation.md  aws-deploy-summary.md  gateway-load-balancing.md  lab6.md  lab6_login_performance.xlsx  lab7-commands.md  lab7.md  p2_2c.md  prototype4_cache_resultados.xlsx  prototype4_performance.md  prototype4_reliability.md  prototype_4.md  security_patterns_implementation_v3.md  service-descriptions.md
docs/diagrams/: c&c.mermaid  decomposition.mermaid  deployment.mermaid  layered.mermaid
infra/: .env.example  docker-compose.gateway-direct.yml  docker-compose.gateway-scale.yml  docker-compose.yml  up.sh
infra/audit-db/: init.sh
infra/cassandra/: init.cql
infra/cdk/: .gitignore  README.md  cdk.context.json  cdk.json  package-lock.json  package.json
infra/cdk/lib/: cluster-construct.ts  (+3 more)
infra/certs/: ca.crt  server.crt
infra/postgres/: init.sql
services/audit/: Dockerfile  consumer.go  go.mod  go.sum  main.go  server.go  store.go
services/auth/: Dockerfile  pom.xml
services/auth-lb/: nginx.ip-hash.conf  nginx.least-conn.conf  nginx.round-robin.conf
services/chat/: .dockerignore  Cargo.toml  Dockerfile  build.rs  init.cql
services/chat/src/: auth.rs  main.rs  proto.rs  state.rs  user_registry.rs
services/chat/src/handlers/: attachments.rs  messages.rs  mod.rs
services/chat/tests/: unit_tests.rs
services/gateway/: Dockerfile  breaker.go  go.mod  go.sum  main.go  server.go  server_test.go
services/gateway-lb/: nginx.ip-hash.conf  nginx.least-conn.conf  nginx.round-robin.conf
services/presence/: Dockerfile  go.mod  go.sum  handler.go  handler_test.go  main.go
services/reverse-proxy/: Dockerfile  docker-entrypoint.sh  nginx-plain.conf  nginx-tls.conf  nginx.conf
services/servers/: Dockerfile  pom.xml
services/tips/: Dockerfile  main.py  requirements.txt
services/voice/: Dockerfile  check_perm_pb2.py  check_perm_pb2_grpc.py  main.py  requirements.txt  signaling.py  test_join.py  test_leave.py  test_participants.py  test_signaling.py
tests/perf/: auth-scaling-knee.xlsx  build_knee_chart.py  login_test.js  make_cache_xlsx.py  messages_cache_test.js  run_login_test.sh  run_login_test_remote.sh  run_messages_cache_test.sh  ~$auth-scaling-knee.xlsx
(+125 files in other folders)
