[package]
name = "chat-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "net", "signal", "sync"] }
tower-http = { version = "0.5", features = ["trace"] }
tower = "0.4"
scylla = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tonic = "0.11"
prost = "0.12"
rdkafka = { version = "0.36", features = ["cmake-build"] }
async-trait = "0.1"
authmw = { path = "../../contracts/lib/rust/authmw" }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-credential-types = "1"
bytes = "1"
regex = "1"
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "test-util"] }
