[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "audit"
version = "0.1.0"
description = "Shared fire-and-forget audit-event emitter for Concordia Python services"
requires-python = ">=3.11"
dependencies = ["confluent-kafka>=2.5"]

[tool.setuptools]
packages = ["audit"]
